(lang dune 2.8)

(generate_opam_files true)
(name nombres)
(package
  (name nombres)
  (description
"\| Convert ints into french.
"\|
"\| Some references:
"\| - https://leconjugueur.lefigaro.fr/frlesnombres.php
"\| - https://www.miakinen.net/vrac/nombres
"\| - https://www.dcode.fr/ecriture-nombre-lettres
))